--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,9 +1,9 @@
 .navbar-container{
-    @apply flex desktop:py-[1.5rem] phone:py-[1rem]  desktop:px-[4rem] flex-row  items-center shadow-md  justify-between bg-[#2893EA] phone:px-[0.5rem] phone:w-[100vw]  desktop:w-[100vw] 
+    @apply flex desktop:py-[1.5rem] phone:py-[1rem]  desktop:px-[4rem] flex-row  items-center shadow-md  justify-between bg-white phone:px-[0.5rem] phone:w-[100vw]  desktop:w-[100vw] 
 }
 
 .navbar-section-items{
-    @apply flex flex-row gap-[3rem] text-[1rem]  font-medium
+    @apply flex desktop:flex-row gap-[3rem] text-[1rem]  font-medium phone:flex-col phone:bg-[red] desktop:bg-transparent phone:items-start desktop:items-center phone:px-[1.5rem] desktop:px-[0rem] 
 }
 
 .isScrolled{
@@ -11,19 +11,23 @@
 }
 
 .navbar-item-contact{
-    @apply bg-[#5be2d9] py-[0.5rem] px-[1rem] rounded-md text-white font-normal hover:text-black hover:bg-[#2893EA] cursor-pointer
+    @apply bg-[#2893EA] py-[0.5rem] px-[1rem] rounded-md text-white font-normal hover:text-black hover:bg-[#2893EA] cursor-pointer  phone:w-[50%] desktop:w-[100%] 
 }
 
 .navbar-section-logo{
-    @apply desktop:text-[1.5rem] font-bold text-white phone:text-[1rem] 
+    @apply desktop:text-[1.5rem] font-bold phone:text-[1rem] 
 }
 
-/* .ham-menu{
-    @apply h-[100%] 
-} */
+.ham-menu{
+    @apply h-[2rem] w-[2rem] desktop:hidden
+}
+
+.menu-bar{
+    @apply h-[100%] w-[100%]
+}
 
 .navbar-item{
-    @apply text-[0.9rem]  text-white items-center flex justify-center cursor-pointer flex-col  desktop:text-[1.02rem]
+    @apply text-[0.9rem]  text-black items-center flex justify-center cursor-pointer flex-col  desktop:text-[1.02rem]
 }
 
 .navbar-section-links{
@@ -48,4 +52,13 @@
 }
 .bg-change{
     @apply bg-[black]
+}
+
+.phone-menu{
+    @apply absolute flex-col  flex  left-[0] top-[0] h-[100vh] w-[100vw] 
+}
+
+
+.hidden-bug{
+    @apply flex desktop:hidden
 }
