--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,11 +1,11 @@
 
 
 .section-footer{
-    @apply bg-[#2893Ea] pl-[3.45rem] pt-[3.19rem] pr-[1.96rem] desktop:pb-[3.04rem]
+    @apply bg-[#2893Ea] pl-[3.45rem] pt-[3.19rem] pr-[1.96rem] desktop:pb-[3.04rem] 
   }
   
   .footer-first-div{
-    @apply  relative desktop:flex desktop:flex-row desktop:justify-evenly
+    @apply  relative desktop:flex desktop:flex-row desktop:justify-evenly tablet:items-center tablet:flex tablet:flex-col
   }
   
   .footer-first-header{
