--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,3 +1,3 @@
 .about-page{
-    @apply h-[90vh] w-[100%]
+    @apply h-[50vh] w-[100%] text-[2rem] flex items-center justify-center font-bold text-[#2893ea]
 }
